--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div id="app">
-      <div class="header" id="preact-header"></div>
+      <div class="header hide" id="preact-header"></div>
 
-      <div class="content">
+      <div class="content hide">
         <div class="grid">
           <div class="cell"></div>
           <div class="cell"></div>
@@ -104,7 +104,7 @@
         </div>
       </div>
 
-      <div class="footer">
+      <div class="footer hide">
         <div class="numbers">
           <div class="number">1</div>
           <div class="number">2</div>
@@ -116,6 +116,14 @@
           <div class="number">8</div>
           <div class="number">9</div>
         </div>
+      </div>
+    </div>
+
+    <div class="popup">
+      <div class="popup-content">
+        <div class="popup-item" data-value="15">Easy</div>
+        <div class="popup-item" data-value="30">Medium</div>
+        <div class="popup-item" data-value="45">Hard</div>
       </div>
     </div>
 
