feat: adds buy me coffe

--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
           <div class="number">9</div>
         </div>
       </div>
+
+      <a href="https://www.buymeacoffee.com/vkovaliov" class="bmc">
+        <image
+          src="https://img.shields.io/badge/buymeabook-ffd966?style=for-the-badge&logo=buymeacoffee&logoColor=white"
+        />
+      </a>
     </div>
 
     <div class="popup">
